methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:3: error: Missing closing brace `}' assumed here
    forward()
    ^PictureMono2:34: error: Missing closing brace `}' assumed here
    forward()
    ^